# Floneum-Plugin-Template

./: Cargo.toml  README.md
src/: main.rs
